--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -116,7 +116,7 @@ body{
 }
 
 .informacoes-abas .descricao{
-    font-size: 18px;
+    font-size: 16px;
     max-height: 170px;
     overflow-y: auto;
 }
@@ -164,7 +164,7 @@ body{
 }
 
 .lista-projetos li a{
-    background-color: #07e29d;
+    background-color: #05a773;
     width: 300px;
     display: block;
     color: #f8f9fc;
