--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -28,6 +28,7 @@ body{
 .cartao{
     background-color: rgba(0, 0, 0, 0.863);
     width: 370px;
+    height: 590px;
     border: 3px solid rgb(4, 252, 177);
     border-radius: 10px;
     overflow: hidden;
@@ -61,7 +62,8 @@ body{
 }
 
 .cartao .conteudo{
-    margin-top: 10px;
+    margin-top: 15px;
+    margin-bottom: 30px;
 }
 
 .cartao .abas{
@@ -93,6 +95,7 @@ body{
 
 .cartao .informacoes-abas{
     background-color: white;
+    height: 350px;
 }
 
 .cartao .abas .aba:hover{
@@ -107,6 +110,7 @@ body{
 
 .informacoes-abas .informacao.selecionado{
     display: block;
+    padding: 15px 29px;
 }
 
 .informacoes-abas .sub-titulo{
@@ -118,7 +122,9 @@ body{
 .informacoes-abas .descricao{
     font-size: 16px;
     max-height: 170px;
-    overflow-y: auto;
+    text-align: justify;
+    /* overflow-y: auto; */
+  
 }
 
 .informacoes-abas .descricao span{
@@ -132,7 +138,7 @@ body{
     gap: 20px;
     align-items: center;
     max-height: 190px;
-    overflow-y: auto;
+    /* overflow-y: auto; */
 }
 
 .redes-sociais li a{
@@ -172,6 +178,7 @@ body{
     padding: 8px;
     font-size: 17px;
     border-radius: 15px;
+    text-align: center;
 }
 
 .redes-sociais i {
